--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <h1>
 <a id="java-tutorials" class="anchor" href="#java-tutorials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Java Tutorials</h1>
 
-<p>A series of Java tutorials starting from the honourable "Hellow World!" to infinity and beyond!</p>
+<p>A series of Java tutorials starting from the honourable "Hello World!" and going to infinity and beyond!</p>
 
 <p>You can follow the series on <a href="http://jamesfarrugia.blogspot.com">http://jamesfarrugia.blogspot.com</a>.  The repository is organised 
 into a number of directories, one for every post.  As the first posts are very basic, there
 will be no complex project files (as advanced users may expect).  However, as we go along, we
-shal cover the tools of the trade and improve our toolchain until maven et al. are present.</p>
+shall cover the tools of the trade and improve our toolchain until maven et al. are present.</p>
 
 <p>Thank you for coming by!</p>
 
